# alura_space

./: .gitignore  pyproject.toml
galeria/: views.py
templates/galeria/: index.html
