[tool.poetry]
name = "alura-space"
version = "0.1.0"
description = ""
authors = ["Fabricio Castro <baptistafabricio87@gmail.com>"]
readme = "README.md"
packages = [{include = "alura_space"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
